--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <main>
         <h1>Mehrwertsteuer-Rechner</h1>
-        <form action="">
+        <form action="#" onsubmit="return false">
             <div>
                 <h2 for="">Was soll berechnet werden?</h2>
                 <input type="radio" name="radio1" id="MwSt+" onchange="text()">
