--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,43 +8,47 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
 
     <main>
-        <h1>Mehrwertsteuer-Rechner</h1>
-        <form action="#" onsubmit="return false">
+        <section class="container">
+            <h1>Mehrwertsteuer-Rechner</h1>
+            <form class="container_form" action="#" onsubmit="return false">
+                <div>
+                    <h2 for="">Was soll berechnet werden?</h2>
+                    <input type="radio" name="radio1" id="MwSt+" onchange="text()">
+                    <label for="">Mehrwertsteuer aufschlagen (Netto zu Brutto)</label>
+                    <input type="radio" name="radio1" id="MwSt-" onchange="text()">
+                    <label for="">Mehrwertsteuer abziehen (Brutto zu Netto)</label>
+                </div>
+                <div>
+                    <h2 for="">Mehrwertsteuersatz</h2>
+                    <input type="radio" name="radio2" id="satz_19">
+                    <label for="">19%</label>
+                    <input type="radio" name="radio2" id="satz_7">
+                    <label for="">7%</label>
+                </div>
+                <div>
+                    <h2 id="txt_MwSt"></h2>
+                    <input type="number" id="inputNum" required>
+                    <input type="button" value="BERECHNEN" onclick="rechner()">
+                </div>
+            </form>
+            <h3>Ergebnis</h3>
             <div>
-                <h2 for="">Was soll berechnet werden?</h2>
-                <input type="radio" name="radio1" id="MwSt+" onchange="text()">
-                <label for="">Mehrwertsteuer aufschlagen (Netto zu Brutto)</label>
-                <input type="radio" name="radio1" id="MwSt-" onchange="text()">
-                <label for="">Mehrwertsteuer abziehen (Brutto zu Netto)</label>
+                <p>Mehrwertsteuerbetrag</p>
+                <p id="result_MwSt"></p>
             </div>
             <div>
-                <h2 for="">Mehrwertsteuersatz</h2>
-                <input type="radio" name="radio2" id="satz_19">
-                <label for="">19%</label>
-                <input type="radio" name="radio2" id="satz_7">
-                <label for="">7%</label>              
+                <!-- Bruttobetrag (Endpreis) // Nettobetrag -->
+                <p id="txt-BetragErgebnis"></p>
+                <p id="result_endbetrag"></p>
             </div>
-            <div>
-                <h2 id="txt_MwSt"></h2>
-                <input type="number" id="inputNum"required>
-                <input type="button" value="BERECHNEN" onclick="rechner()">
-            </div>
-        </form>
-        <h3>Ergebnis</h3>
-        <div>
-            <p>Mehrwertsteuerbetrag</p>
-            <p id="result_MwSt"></p>
-        </div>
-        <div>
-            <!-- Bruttobetrag (Endpreis) // Nettobetrag -->
-            <p id="txt-BetragErgebnis"></p>
-            <p id="result_endbetrag"></p>
-        </div>
+        </section>
     </main>
 
-<script src="./assets/js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
+
 </html>
