changed radio btns

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                 <div>
                     <h2 for="">Was soll berechnet werden?</h2>
                     <article class="flex_select">
-                        <div>
-                            <label for="">Mehrwertsteuer aufschlagen (Netto zu Brutto)</label>
-                            <input type="radio" name="radio1" id="MwSt+" onchange="text()">
-                        </div>
-                        <div>
-                            <input type="radio" name="radio1" id="MwSt-" onchange="text()">
-                            <label for="">Mehrwertsteuer abziehen (Brutto zu Netto)</label>
-                        </div>
+                        <!-- <div> -->
+                        <label for="">Mehrwertsteuer aufschlagen <br /> (Netto zu Brutto)</label>
+                        <input type="radio" name="radio1" id="MwSt+" onchange="text()">
+                        <!-- </div>
+                        <div> -->
+                        <input type="radio" name="radio1" id="MwSt-" onchange="text()">
+                        <label for="">Mehrwertsteuer abziehen <br />(Brutto zu Netto)</label>
+                        <!-- </div> -->
                     </article>
                 </div>
                 <div>
